[BUG]: Navbar elements are not overlapped in small screen #18337

--- a/core/templates/components/common-layout-directives/navigation-bars/top-navigation-bar.component.css
+++ b/core/templates/components/common-layout-directives/navigation-bars/top-navigation-bar.component.css
@@ -354,6 +354,7 @@
 }
 .oppia-top-navigation-bar .oppia-navbar-profile {
   float: right;
+  margin-top: 1px;
 }
 .oppia-top-navigation-bar .oppia-navbar-role-indicator {
   background-color: #f7a541;
